welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: reassignment to val
	if (a=b && b=c) {
             ^greenTicket:8: error: reassignment to val
	if (a=b || a=c || b=c) {
             ^greenTicket:8: error: type mismatch;
 found   : Unit
 required: Int
	if (a=b || a=c || b=c) {
        ^